belajar/example/example-env-var-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-env-var
  labels:
    name:  test-pod-env-var
spec:
  volumes:
    - name: replica-share-volume
      emptyDir: {}
  containers:
    - name: nodejs-writer3
      image: khannedy/nodejs-writer
      volumeMounts:
        - mountPath: /app/folder-from-env
          name: replica-share-volume
