belajar/example/example-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-awal
  labels:
    name: statefulset-awal
spec:
  serviceName: statefulset-service
  replicas: 3
  selector:
    matchLabels:
      name: statefulset-awal
  volumeClaimTemplates:
    - metadata:
        name: pv-statefulset-claim
      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      name: statefulset-awal
      labels:
        name: statefulset-awal
    spec:
      containers:
        - name: cont-stateful
          image: khannedy/nodejs-stateful
          volumeMounts:
            - mountPath: /app/data
              name: pv-statefulset-claim
