belajar/example/examplepresvol.yaml

apiVersion: v1
kind: Pod
metadata: 
  name: pod-nj-pv
  labels:
    name: pod-nj-pv
spec:
 volumes:
   - name: html
     persistentVolumeClaim:
        claimName: nodejs-pvc
 containers:
    - name: nj-cont
      image: khannedy/nodejs-writer
      volumeMounts:
        - mountPath: /app/html
          name: html
