belajar/example/label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-label
  namespace: belajar
  labels:
    app: belajar
    version: 1.1.1
    staging: dev
spec:
  containers:
    - name: container
      image: nginx
      ports:
        - containerPort: 80
