belajar/example/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-contoh-3
  namespace: belajar
spec:
  containers:
    - name: container-contoh
      image: nginx
      ports:
        - containerPort: 80
