belajar/example/example-configmap.yaml

apiVersion: v1
kind: Service
metadata:
  name:  testing-configmap-svc
spec:
  type: NodePort
  selector:
    name:  nodejs-writer4
    app: belajar
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
