belajar/example/example-downgrade-api.yaml
apiVersion: v1
kind: Service
metadata: 
  name: svc-dg
spec:
  type: NodePort
  selector:
    name: rs-belajar-dg
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
