belajar/example/example-loadbalancer-provider.yaml

apiVersion: v1
kind: Service
metadata:
  name: servicelb
spec:
  type: LoadBalancer
  selector:
    name:  nginx-rs-provider-lb
  ports:
    - port: 80
      targetPort: 80
