belajar/example/example-multipod.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-test-multipod
spec:
  selector:
    name: test-multipod
  ports:
    - port: 8080
      targetPort: 80
      name: multipod-container-test
    - port: 3000
      targetPort: 3000
      name: node-multipod-test

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: khannedy/nginx-curl
