belajar/example/example-secret.yaml

apiVersion: v1
kind: Service
metadata:
  name: secret-test-svc
spec:
  type: NodePort
  selector:
    name: rs-belajar-value
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
