belajar/example/example-sharing-volume.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    name:  test-replicaset-sharevolume
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
