belajar/example/exampleHPA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-nginx
  labels:
    name: apps-nginx
spec:
  selector:
    matchLabels:
      name: apps-nginx
  template:
    metadata:
      name: apps-nginx
      labels:
        name: apps-nginx
    spec:
      containers:
        - name: nginx-cont
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hpa-svc
spec:
  type: NodePort
  selector:
    name: apps-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30004
